fixed ce panel's header item overlapping

--- a/public/css/main.stylesheet.css
+++ b/public/css/main.stylesheet.css
@@ -424,7 +424,7 @@ input[type="text"]:focus {
 
 .ce-panel {
   font: inherit;
-  width: 220px;
+  width: 240px;
   top: 90px;
   left: 10px;
 }
